--- a/lang/go/idiomatic/people/prefix-format.enum.yaml
+++ b/lang/go/idiomatic/people/prefix-format.enum.yaml
@@ -1,4 +1,5 @@
-serialize: pascal-to-kebab-lower
+serialize: 
+    values: pascal-to-kebab-lower
 values:
     -   name: Full
     -   name: Abbreviation
