--- a/lang/go/idiomatic/phone/nanp-phone-separator-format.enum.yaml
+++ b/lang/go/idiomatic/phone/nanp-phone-separator-format.enum.yaml
@@ -1,5 +1,6 @@
 
-serialize: pascal-to-kebab-lower
+serialize: 
+    values: pascal-to-kebab-lower
 values:
     -   name: DotSeparated
     -   name: DashSeparated
