--- a/lang/go/idiomatic/phone/nanp-phone-separator-format.enum.yaml
+++ b/lang/go/idiomatic/phone/nanp-phone-separator-format.enum.yaml
@@ -1,6 +1,6 @@
 
 serialize: 
-    values: pascal-to-kebab-lower
+    value: pascal-to-kebab-lower
 values:
     -   name: DotSeparated
     -   name: DashSeparated
