--- a/lang/go/idiomatic/people/prefix-format.enum.yaml
+++ b/lang/go/idiomatic/people/prefix-format.enum.yaml
@@ -1,5 +1,5 @@
 serialize: 
-    values: pascal-to-kebab-lower
+    value: pascal-to-kebab-lower
 values:
     -   name: Full
     -   name: Abbreviation
