--- a/lang/go/idiomatic/people/prefix-format.enum.yaml
+++ b/lang/go/idiomatic/people/prefix-format.enum.yaml
@@ -2,4 +2,6 @@ serialize:
     value: pascal-to-kebab-lower
 values:
     -   name: Full
+    -   name: FullWithDescription
     -   name: Abbreviation
+    -   name: AbbreviationWithDescription
