--- a/lang/go/idiomatic/people/prefix.data.yaml
+++ b/lang/go/idiomatic/people/prefix.data.yaml
@@ -1,15 +1,17 @@
 data:
     -   id: b5a5b96c-5955-44c4-8d53-2c7fd1090a02
-        # id: https://www.boundedinfinity.com/schema/people/prefix/mister
         text: Mister
-        abbreviation: 
-            - Mr
-            - Mr.
-        description: |
-            A title used before a surname or full name to address or refer to a man
-            without a higher, honorific or professional title.
+        abbreviation: Mr.
+        descriptor:
+            description: |
+                A title used before a surname or full name to address or refer to a man
+                without a higher, honorific or professional title.
+            parsable:
+                - Mr
+                - mr
+                - mr.
+            default-format: abbreviation
     -   id: 685CE8DD-7700-4A2A-97EE-93BB19668639
-        # id: https://www.boundedinfinity.com/schema/people/prefix/miss
         text: Mistress
         abbreviation: 
             - Miss
@@ -18,7 +20,6 @@ data:
             unmarried or young woman without a higher, honorific or professional 
             title.
     -   id: 6A84CDFB-3D23-4F02-A78D-D5455FE90A8C
-        # id:  https://www.boundedinfinity.com/schema/people/prefix/mrs
         text: Missus
         abbreviation: 
             - Mrs
@@ -27,7 +28,6 @@ data:
             married or widowed woman without a higher, honorific or professional 
             title.
     -   id: 49012343-F2B6-4C88-A15A-08C9AE19FA1A
-        # id:  https://www.boundedinfinity.com/schema/people/prefix/ms
         text: Miss or Mrs
         abbreviation: 
             - Ms
@@ -37,25 +37,21 @@ data:
             woman of unknown marital status without a higher, honorific or 
             professional title.
     -   id: 5DEE7D26-B8D5-4E10-89A8-A5AAF3FF3D11
-        # id:  https://www.boundedinfinity.com/schema/people/prefix/master
         text: Master
         description: |
             A title used before a surname or full name to address or refer to a boy
             or young man without a higher, honorific or professional title.
     -   id: 299F658C-05B9-463F-A325-7528F3AE6CDF
-        # id:  https://www.boundedinfinity.com/schema/people/prefix/sir
         text: Sir
         description: |
             A title used before a surname or full name to address or refer to a man
             if they have a British knighthood or if they are a baronet.
     -   id: 0D3F9CFC-7817-44E1-9457-C5293D3453C1
-        # id:  https://www.boundedinfinity.com/schema/people/prefix/madam
         text: Madam
         description: |
             A title used before a surname or full name to address or refer to a 
             woman if they hold an hereditary rank.
     -   id: 61168ECC-A3B0-4712-A79A-3EB81C4307DD
-        # id:  https://www.boundedinfinity.com/schema/people/prefix/dame
         text: Dame
         description: |
             A title used before a surname or full name to address or refer to a 
