--- a/lang/ts/package.json
+++ b/lang/ts/package.json
@@ -13,5 +13,10 @@
     "jsdom": "^20.0.0",
     "typescript": "^4.8.3",
     "vitest": "^0.23.4"
+  },
+  "dependencies": {
+    "@types/prettier": "^2.7.3",
+    "handlebars": "^4.7.8",
+    "prettier": "^3.5.3"
   }
 }
