--- a/lang/ts/gen/deno.json
+++ b/lang/ts/gen/deno.json
@@ -6,9 +6,12 @@
     "@prettier/sync": "npm:@prettier/sync@^0.5.5",
     "@std/assert": "jsr:@std/assert@1",
     "@types/lodash": "npm:@types/lodash@^4.17.17",
+    "@types/typescript": "npm:@types/typescript@^2.0.0",
+    
     "handlebars": "npm:handlebars@^4.7.8",
     "lodash": "npm:lodash@^4.17.21",
     "prettier": "npm:prettier@^3.5.3",
+    "typescript": "npm:typescript@^5.8.3",
     "typescript-formatter": "npm:typescript-formatter@^7.2.2",
     "zod": "npm:zod@^3.25.56"
   }
