--- a/lang/ts/example/package.json
+++ b/lang/ts/example/package.json
@@ -12,9 +12,11 @@
     "description": "",
     "dependencies": {
         "@libsql/client": "^0.15.9",
+        "lodash": "^4.17.21",
         "uuid": "^11.1.0"
     },
     "devDependencies": {
+        "@types/lodash": "^4.17.19",
         "@types/node": "^24.0.4",
         "@types/uuid": "^10.0.0",
         "ts-node": "^10.9.2",
