--- a/lang/ts/example/tsconfig.json
+++ b/lang/ts/example/tsconfig.json
@@ -6,6 +6,6 @@
         "strict": true,
         "outDir": "out",
         "skipLibCheck": true,
-        "sourceMap": true
+        "sourceMap": true,
     }
 }
