--- a/lang/ts/example/package.json
+++ b/lang/ts/example/package.json
@@ -12,6 +12,7 @@
     "description": "",
     "dependencies": {
         "@libsql/client": "^0.15.9",
+        "kysely": "^0.28.2",
         "lodash": "^4.17.21",
         "uuid": "^11.1.0"
     },
